--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "compress:css": "node-sass css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass concat:css compress:css"
+    "build:css": "npm-run-all compile:sass compress:css"
   },
   "author": "Jonas",
   "license": "ISC",
