--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "concat": "^1.0.3",
     "live-server": "^1.2.2",
-    "node-sass": "^4.5.3",
-    "npm-run-all": "^4.1.1"
+    "npm-run-all": "^4.1.1",
+    "sass": "^1.77.8"
   }
 }
