update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Flex-ible",
+  "name": "flexible",
   "version": "1.0.0",
   "description": "Flex-ible exercise project",
   "main": "index.js",
