update package json

--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Flex-ible exercise project",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "sass sass/main.scss css/style.css -w",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "compress:css": "node-sass css/style.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass compress:css"
+    "compile:sass": "sass sass/main.scss css/style.css",
+    "build:css": "npm-run-all compile:sass"
   },
   "author": "Jonas",
   "license": "ISC",
